<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NfcActivity">

    <Button
        android:id="@+id/scan_btn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/scan_a_device"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create_btn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_a_device"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scan_btn" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/device_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ScrollView
        android:visibility="invisible"
        android:id="@+id/device_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/device_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/product_id_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp">

                <TextView
                    android:id="@+id/product_id_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/product_id"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/product_id_detail_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/target_current_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp">

                <TextView
                    android:id="@+id/target_current_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/target_current"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/target_current_detail_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dimming_curve_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp">

                <TextView
                    android:id="@+id/dimming_curve_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/dimming_curve"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/dimming_curve_detail_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/power_on_state_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp">

                <TextView
                    android:id="@+id/power_on_state_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/power_on_state"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/power_on_state_detail_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/on_off_tran_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp">

                <TextView
                    android:id="@+id/on_off_tran_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/on_off_tran_time"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/on_off_tran_detail_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/enable_pairing_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp">

                <TextView
                    android:id="@+id/enable_pairing_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/enable_pairing"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/enable_pairing_detail_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/min_current_comp_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp">

                <TextView
                    android:id="@+id/min_current_comp_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/min_current_comp"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/min_current_comp_detail_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/power_on_level_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp">

                <TextView
                    android:id="@+id/power_on_level_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/power_on_level"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/power_on_level_detail_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>